  personal dictionary.
- Modified: Replaced *pel-spell-check-personal-dictionary* by
  *pel-spell-personal-dictionary-directory*.  Instead of defining the name of
  the personal dictionary, PEL now only identifies the directory where all
  personal dictionary files are stored.  Each of them has a name that
  identifies the 2 or 3 letter language code and has the ".ispell" file
  extension.
** New Features:
- The latest version of timelog supports the *timelog-open-file* command.  It
  opens the file identified by the *timeclock-file* user-option.  PEL binds
  this command to ``C-x t l f`` key sequence.
- Add preliminary support for the *go-translate* package when
  *pel-use-go-translate* user option is turned on.  No key binding or
  activation done yet. This is only available for Emacs 27.1 and later.
* Version 0.4.1:
** Modifications:
- Fix: The File Management PDF now describes PEL's ability to select the
  function used opening the recently opened files and properly describes the
  key bindings that are inside the `<f11> f M-r`` key prefix.
- Modified: modeline commands key binding:
  - changed the *pel:modeline* prefix from ``<f11> M-l`` to ``<f11> M-d``
    to make room for outline commands. The ``<f11> M-l`` is now bound to the
    outline-minor-mode command. Modified the key binding s to access the PEL
    PDF, the customization buffers accordingly.
- Removed global key bindings ``<f6> n`` and <f6> p`` to
  ``pel-beginning-of-next-defun`` and ``beginning-of-defun``.  Kept the other
  bindings for these commands including in the ``<f6>`` key prefix.
- Modified: key binding for the ``bm-next`` command: instead of ``<f2>`` it is
  now ``<f2> <f2>``. It is not difficult to remember and type and restore
  access to Emacs default key bindings to the 2C-two-columns,
  2C-associate-buffer and 2C-split commands.
- Renamed: ``pel-imenu-dbg-print-vars`` to ``pel-imenu-print-vars`` for consistency.